# waiting-room

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: index.html  script.js  style.css
ios/: project.yml
ios/WaitingRoom/: AddItemSheet.swift  ClipboardRadar.swift  ConfirmSheet.swift  ContentView.swift  HistoryView.swift  Info.plist  Models.swift  NudgeSheet.swift  PanelView.swift  ReceiptView.swift  Store.swift  Theme.swift  ThemePickerView.swift  WaitingRoom.entitlements  WaitingRoomApp.swift
ios/WaitingRoom.xcodeproj/: project.pbxproj
ios/WaitingRoom/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/WaitingRoom/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/WaitingRoomTests/: WaitingRoomTests.swift
macos/: Package.swift  WaitingRoom.entitlements  build-app.sh  build-dmg.sh
macos/Sources/: AddItemSheet.swift  ClipboardRadar.swift  ConfirmSheet.swift  ContentView.swift  HistorySheet.swift  Models.swift  NudgeSheet.swift  ReceiptView.swift  ScreensaverMode.swift  Theme.swift  ThemePickerSheet.swift  WaitingRoomApp.swift
macos/Tests/: WaitingRoomTests.swift
macos/The Waiting Room.app/Contents/: Info.plist
macos/The Waiting Room.app/Contents/MacOS/: WaitingRoom
macos/The Waiting Room.app/Contents/Resources/: AppIcon.icns
macos/The Waiting Room.app/Contents/_CodeSignature/: CodeResources
tui/: README.md  pyproject.toml  waiting_room.py
tui/src/waiting_room/: __init__.py  __main__.py  app.py
website/: index.html  style.css
