[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waiting-room"
version = "1.0.1"
description = "Track every open loop in both directions — who owes you, and who you're blocking."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rijo George" },
]
keywords = ["productivity", "tui", "terminal", "waiting", "follow-up", "tracker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "textual>=0.40",
]

[project.scripts]
waiting-room = "waiting_room.__main__:main"

[project.urls]
Homepage = "https://rijo-george.github.io/waiting-room/"
Repository = "https://github.com/rijo-george/waiting-room"
Download = "https://github.com/rijo-george/waiting-room/releases"
